# torrent-file-editor

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .prettierrc.yaml  .project.el  .travis.yml  CMakeDMGSetup.scpt  CMakeLists.txt  Dmg.cmake  MacOSXBundleInfo.plist.in  PVS-Studio.cfg  Plog-Converter.cfg  README.md  Version.cmake  aboutdlg.cpp  aboutdlg.h  aboutdlg.ui  abstracttreeitem.cpp  abstracttreeitem.h  abstracttreemodel.cpp  abstracttreemodel.h  abstracttreenode.h  app.rc  app.rc.in  appcast.json.in  appcast.xml.in  application.cpp  application.h  bencode.cpp  bencode.h  bencodedelegate.cpp  bencodedelegate.h  bencodemodel.cpp  bencodemodel.h  build-mxe-shared.sh  build-mxe-static.sh  build-nsis.sh  build.sh  checkupdate.cpp  (+53 more)
.github/workflows/: cmake-single-platform.yml
DIEPDTN_Test/: [BakaBT.173176v2] Dakara Boku wa, H ga Dekinai [BD 720p] [FFF].torrent
LICENSES/: BSD-2-Clause
cmake/: CompileParseCommand.cmake  CompilePch.cmake  Dmg.cmake  FindSparkle.cmake  PCHLinkTarget.cmake  PchLinkTarget.cmake  QtMajorVersion.cmake  Version.cmake  appcast.xml.in  dsa_priv.pem  parse-compile-commands.c
cmake/CMakePCHCompiler/: CMakeCPCHCompiler.cmake.in  CMakeCXXPCHCompiler.cmake.in  CMakePCHCompiler.cmake  README.md
cmake/CMakePCHCompiler/Platform/: Apple-AppleClang-CXXPCH.cmake  Apple-Clang-CPCH.cmake  Apple-Clang-CXXPCH.cmake  Apple-GNU-CPCH.cmake  Apple-GNU-CXXPCH.cmake  Apple-Intel-CPCH.cmake  Apple-Intel-CXXPCH.cmake  Darwin-AppleClang-CXXPCH.cmake  Darwin-Clang-CPCH.cmake  Darwin-Clang-CXXPCH.cmake  Darwin-GNU-CPCH.cmake  Darwin-GNU-CXXPCH.cmake  Darwin-Intel-CPCH.cmake  Darwin-Intel-CXXPCH.cmake  Linux-GNU-CPCH.cmake  Linux-GNU-CXXPCH.cmake  Linux-Intel-CPCH.cmake  Linux-Intel-CXXPCH.cmake  Windows-Clang-CPCH.cmake  Windows-Clang-CXXPCH.cmake  Windows-Intel-CPCH.cmake  Windows-Intel-CXXPCH.cmake  Windows-MSVC-CPCH.cmake  Windows-MSVC-CXXPCH.cmake
debian/: changelog  control  rules
icons/: application.icns  png2icns.sh  png2ico.sh  svg2png.sh
icons/gnome/: index.theme
nvwa/: CMakeLists.txt  _nvwa.h  c++11.h  debug_new.cpp  debug_new.h  fast_mutex.h
translations/: CMakeLists.txt  torrentfileeditor_af.ts  torrentfileeditor_ar.ts  torrentfileeditor_bn.ts  torrentfileeditor_cs.ts  torrentfileeditor_de.ts  torrentfileeditor_en.ts  torrentfileeditor_es.ts  torrentfileeditor_fi.ts  torrentfileeditor_fr.ts  torrentfileeditor_he.ts  torrentfileeditor_hu.ts  torrentfileeditor_id.ts  torrentfileeditor_it.ts  torrentfileeditor_ja.ts  torrentfileeditor_ko.ts  torrentfileeditor_nl.ts  torrentfileeditor_pl.ts  torrentfileeditor_pt.ts  torrentfileeditor_pt_BR.ts  torrentfileeditor_ro.ts  torrentfileeditor_ru.ts  torrentfileeditor_tr.ts  torrentfileeditor_uk.ts  torrentfileeditor_vi.ts  torrentfileeditor_zh_CN.ts  torrentfileeditor_zh_TW.ts
